fixing Ubyssey header wrap

--- a/dispatch/themes/ubyssey/static/css/sass/modules/_header.scss
+++ b/dispatch/themes/ubyssey/static/css/sass/modules/_header.scss
@@ -101,15 +101,12 @@ nav.main {
 
 
 header.topbar {
-  //height: 55px;
-  //line-height: 55px;
   height: 48px;
   line-height: 48px;
   width: 100%;
   z-index: 50;
   position: fixed;
   top: 0;
-  /* background: rgba(255, 255, 255, 0.98); */
   background: #fff;
   border-bottom: 1px solid #DADADA;
   box-shadow: rgba(0,0,0,0.15) 0 0 3px 0;
@@ -139,6 +136,7 @@ header.topbar {
   }
   nav {
     display: inline-block;
+    white-space: nowrap;
     vertical-align: top;
     font-family: $font-default;
     font-weight: 500;
@@ -166,6 +164,7 @@ header.topbar {
 
   h1.nav-headline {
       display: inline-block;
+      white-space: nowrap;
       font-family: $font-default;
       font-size: 14px;
       font-weight: 500;
